fix: overflow error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -499,5 +499,7 @@
   body {
     @apply bg-background text-foreground;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    overflow: hidden;
+    max-width: 100vw;
   }
 }
